homework-2/RDS.tf
#Make simple RDS
resource "aws_db_instance" "default" {
  allocated_storage    = 10
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t2.micro"
  name                 = "wordpress"
  username             = "${var.user}"
  password             = "${var.password}"
  parameter_group_name = "default.mysql5.7"
  skip_final_snapshot  = true
  db_subnet_group_name = aws_db_subnet_group.new-rds.name
  vpc_security_group_ids  =  ["${aws_security_group.db_sg.id}"]

}
